# VR-Based-Real-Time-Agent

./: .env.example  .gitignore  3d_avatar_experiment_log.md  CHANGELOG.md  CLAUDE.md  LAST_DANCE_PIPELINE.md  PROJECT_ANALYSIS.md  README.md  analysis_results.md  avatar_controller_guide.md  avatar_progress_report.md  environment.yml  extract_expert_keypoints.py  hammer_curl_expert_keypoints.json  index.html  lateral_raise_expert_keypoints.json  main.py  model_3d_deep_analysis.md  movenet_ws_server.py  package-lock.json  package.json  play_squat.py  pull_up_expert_keypoints.json  pyproject.toml  requirements.txt  run_motionbert.py  run_steps.py  server.py  squat_expert_keypoints.json  squat_expert_keypoints_3d_mb.json  squat_left_1_keypoints.json  test_debug.py  vite.config.ts
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
backend/: config.py  dtw_comparator.py  expert_cache.py  pose_estimator.py  pose_normalizer.py  rep_detector.py  score_engine.py  ui_renderer.py
docs/: 03_expert_cache.md  05_rep_detector.md  06_score_engine.md  07_ui_renderer.md  08_camera_session.md  PROBLEM_SOLUTIONS.md  SETUP.md
final/: 01_test_preprocessing.py  02_test_backend.py  03_test_database.py  04_test_webcam.py  07_pipeline_web.py  08_pipeline_full.py  ARCHITECTURE.md  FINAL_ARCHITECTURE.md  FINAL_HANDOFF_REPORT.md  PIPELINE.md  README.md  REPORT_COMPONENT_STRUCTURES.md  REPORT_SYSTEM_STRUCTURE.md  index.html  package-lock.json  package.json  pipeline_full.py  pipeline_test.py  pipeline_web_only.py  requirements.txt  vite.config.ts
model_3d/: README.md  __init__.py  (+24 more)
(+203 files in other folders)
