[project]
name = "pose"
version = "0.1.0"
requires-python = "==3.10.*"
dependencies = [
    "tensorflow==2.10.*",
    "tensorflow-io-gcs-filesystem<0.32; sys_platform == 'win32'",
    "tensorflow-hub>=0.16",
    "opencv-python>=4.10",
    "numpy>=1.22,<1.24",
    "dtaidistance>=2.3",
    "setuptools>=68,<81",
]
